[fix] Artemis connection & conversion fix